Add a API for uploading a product's image
